[package]
name = "minicoro-sys"
version = "0.8.1"
edition = "2021"
license = "Apache-2.0"
license-file = "LICENSE.txt"
readme = "README.md"
repository = "https://github.com/YC-Lammy/minicoro-sys"
description = "rust binding to minicoro"

keywords = ["minicoro", "coroutine", "generator", "stackful"]
categories = ["api-bindings", "asynchronous", "concurrency", "no-std", "no-std::no-alloc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cc = "1.0"